[tool.poetry]
name = "multiagent-chat"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git", branch = "feat/multiagent-decorator"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
